--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@ Layout/LineLength:
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*.rb'
+    - 'lib/tasks/auto_annotate_models.rake'
 
 Style/Documentation:
   Enabled: false
